2004-05-13  Angus Leeming  <angus.leeming@btopenworld.com>

	* image/Makefile.am (libflimage_la_LDFLAGS): 
	* gl/Makefile.am (libformsGL_la_LDFLAGS): change the -version-info
	data to '@SO_VERSION@' so that all get updated automatically.

2004-05-13  Reed Riddle  <drriddle@mac.com>

	* lib/xyplot.c:
	* lib/include/xyplot.h (fl_replace_xyplot_point_in_overlay):
	new function, generalizing the existing fl_replace_xyplot_point
	which acts only on the first dataset.

2004-05-12  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* gl/Makefile.am (INCLUDES): 
	* demos/Makefile.am (INCLUDES): 
	* fd2ps/Makefile.am (INCLUDES): 
	* fdesign/Makefile.am (INCLUDES): add X_CFLAGS

2004-05-07  Angus Leeming  <angus.leeming@btopenworld.com>

	* (xforms.spec.in): add code to the 'post' script to modify
	libforms.la et al. to prevent libtool from complaining that
	the files have been moved.

2004-05-07  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/private/pvaluator.h (repeat_ms, timeout_id, mouse_pos):
	new variables.
	* lib/include/slider.[ch] (fl_[sg]et_slider_repeat):
	* lib/include/counter.[ch] (fl_[sg]et_counter_repeat):
	new accessor functions, enabling the user to query and modify the
	timeout used to control the behaviour of these widgets when the
	mouse is kept pressed down.

	* lib/include/slider.[ch] (handle_mouse):
	* lib/include/counter.[ch] (handle_mouse): use a timeout to
	control the rate at which the slider/counter is incremented.
	Replaces the current strategy which used a simple counter loop and
	which has become unusable with today's fast processors.

2004-05-06  Angus Leeming  <angus.leeming@btopenworld.com>

	* configure.ac (SO_VERSION): new variable defining the libtool
	version info. Substituted in lib/Makefile.am and xforms.spec.in.

	* lib/Makefile.am (libforms_la_LDFLAGS): use the configure-time
	variable @SO_VERSION@ rather than the hard-coded 1:0:0.

	* xforms.spec.in: fix 'Release' and 'Source0' info.